# run_ollama

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
