[project]
name = "run-ollama"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "humanize>=4.15.0",
    "ollama>=0.6.1",
    "pyperclip>=1.11.0",
    "Mastodon.py>=1.8.1",
    "python-dotenv>=1.0.1",
    "redis>=7.2.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
]
