[project]
name = "run-ollama"
version = "0.1.2"
description = "A personal technical journalist for web content using local LLMs (Ollama) and Mastodon integration."
requires-python = ">=3.12"
dependencies = [
    "humanize==4.15.0",
    "ollama==0.6.1",
    "pyperclip==1.11.0",
    "Mastodon.py==2.1.4",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
]
